--- a/index.html
+++ b/index.html
@@ -1,8 +1,118 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>jhr.cz - yeah that's me</title>
+
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+<!-- CUSTOM STYLE -->
+<style type="text/css">
+
+body {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  
+      font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
+
+}
+
+.navbar {
+  margin-bottom: 20px;
+}
+
+.footer {
+  text-align: right;
+}
+
+.content { 
+  padding-right: 60px;
+  padding-left: 60px;
+}
+
+.container {
+	text-align: center;
+}
+
+.countdown {
+    font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
+    border: 0px solid #6b15a1;
+    color: #ff0000;
+    background-color: transparent;
+    margin: 0 auto 30px;
+    height: 144px;
+    font-size: 50px;
+    line-height: 140px;
+    display: block;
+    font-weight: 300;
+    text-align: center;
+    cursor: default;
+    border-radius: 5%;
+}
+
+.countdown .black {
+color: #000000;	
+}
+</style>
+
+<script>
+var end = new Date('02/03/2097 0:0 AM');
+
+    var _second = 1000;
+    var _minute = _second * 60;
+    var _hour = _minute * 60;
+    var _day = _hour * 24;
+    var timer;
+
+    function showRemaining() {
+        var now = new Date();
+        var distance = end - now;
+        if (distance < 0) {
+
+            clearInterval(timer);
+            document.getElementById('countdown').innerHTML = 'EXPIRED!';
+
+            return;
+        }
+        var days = Math.floor(distance / _day);
+        var hours = Math.floor((distance % _day) / _hour);
+        var minutes = Math.floor((distance % _hour) / _minute);
+        var seconds = Math.floor((distance % _minute) / _second);
+
+        document.getElementById('countdown').innerHTML = days + '<span class="black">&nbsp;dní </span>';
+        document.getElementById('countdown').innerHTML += hours + '<span class="black">&nbsp;hodin </span>';
+        document.getElementById('countdown').innerHTML += minutes + '<span class="black">&nbsp;minut </span>';
+        document.getElementById('countdown').innerHTML += seconds + '<span class="black">&nbsp;sekund</span>';
+    }
+
+    timer = setInterval(showRemaining, 1000);
+</script>
+
+
+</head>
 <body>
-<pre>
-2. .   .   0    .    ....   . .       9     .    . .                 ....  . .          ..       7
-</pre>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+
+<div class="container">
+
+<div class="row content countdown">
+<div id="countdown"></div>
+</div>
+
+</div> <!-- /container -->
+
 </body>
 </html>
 
