--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ var end = new Date('02/03/2097 0:0 AM');
         var minutes = Math.floor((distance % _hour) / _minute);
         var seconds = Math.floor((distance % _minute) / _second);
 
-        document.getElementById('countdown').innerHTML = 'Zbývá '
+        document.getElementById('countdown').innerHTML = ''
         document.getElementById('countdown').innerHTML += days + '<span class="black">&nbsp;dní </span>';
         document.getElementById('countdown').innerHTML += hours + '<span class="black">&nbsp;hodin </span>';
         document.getElementById('countdown').innerHTML += minutes + '<span class="black">&nbsp;minut </span>';
